# try_psc

./: README  try_20250517.py
CloudRun/: Dockerfile  home.py  pyproject.toml
CloudRun_FastAPI/: Dockerfile  README.md  pyproject.toml
CloudRun_FastAPI/app/: main.py
VectorSearch/: items.json  try_basic_vector.ipynb  try_sparse_vector.ipynb
